--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -4,18 +4,17 @@ html
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
-    meta name="keywords" content="#{data.ogp.keywords}"
-    meta name="description" content="#{data.ogp.description}"
+    meta name="keywords" content=""
+    meta name="description" content=""
     / Facebook
     meta property="og:type" content="company"
     meta property="og:locale" content="ja_JP"
-    meta property="og:url" content="#{data.ogp.og.url}"
-    meta property="og:title" content="#{data.ogp.title}"
-    meta property="og:site_name" content="#{data.ogp.og.sitename}"
-    meta property="og:description" content="#{data.ogp.og.description}"
-    - data.ogp.og.images.each do |image|
-      meta property="og:image" content="#{image}"
-    meta property="fb:app_id" content="#{data.ogp.fb.app_id}"
+    meta property="og:url" content=""
+    meta property="og:title" content=""
+    meta property="og:site_name" content=""
+    meta property="og:description" content=""
+    meta property="og:image" content=""
+    meta property="fb:app_id" content=""
     / Twitter
     meta name="twitter:card" content="summary"
     meta name="twitter:site" content="@coconofest"
