--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,4 +1,18 @@
-| --- title: Welcome to Middleman --- 
+---
+layout: layout
+title: 'cocono fest. 2016'
+keywords: 福岡,九州,フェス,音楽
+description: '九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。'
+
+og_title: 'cocono fest. 2016'
+og_type: 'website'
+og_description: '九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。'
+og_url: 'index.html'
+og_image: 'images/index/ogp.png'
+
+page_classes: index
+---
+
 .welcome
   .logo
     = image_tag "middleman-logo.svg"
