--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -4,16 +4,16 @@ html
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
-    meta name="keywords" content=""
-    meta name="description" content=""
+    meta name="keywords" content="#{data.page.keywords}"
+    meta name="description" content="#{data.page.description}"
     / Facebook
-    meta property="og:type" content="company"
+    meta property="og:title" content="#{data.page.og_title}"
+    meta property="og:type" content="#{data.page.og_type}"
     meta property="og:locale" content="ja_JP"
-    meta property="og:url" content=""
-    meta property="og:title" content=""
-    meta property="og:site_name" content=""
-    meta property="og:description" content=""
-    meta property="og:image" content=""
+    meta property="og:url" content="#{data.page.og_url}"
+    meta property="og:site_name" content="SITE NAME"
+    meta property="og:description" content="#{data.page.og_description}"
+    meta property="og:image" content="http://coconofest.asia/#{data.page.og_image}"
     meta property="fb:app_id" content=""
     / Twitter
     meta name="twitter:card" content="summary"
@@ -27,6 +27,5 @@ html
     link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
     = stylesheet_link_tag :site
     = javascript_include_tag :all
-  body
-    .page_classes
-      = yield
+  body.#{page_classes}
+    = yield
