--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,6 +3,7 @@ layout: layout
 
 title: 'cocono fest. 2016'
 
+og_title: 'cocono fest. 2016'
 og_url: 'index.html'
 og_image: 'images/index/ogp.png'
 
