--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -14,7 +14,7 @@ html
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
     meta name="keywords" content=""
-    meta name="description" content="=current_page.data.description"
+    meta name="description" content="current_page.data.description"
     / Facebook
     meta property="og:title" content=""
     meta property="og:type" content=""
