--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,10 +1,10 @@
 ---
 keywords: 福岡,九州,フェス,音楽
-description: '九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。'
+description: 九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。
 
-og_title: 'cocono fest. 2016'
-og_type: 'website'
-og_description: '九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。'
+og_title: cocono fest. 2016
+og_type: website
+og_description: 九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。
 ---
 
 | <!doctype html>
@@ -14,7 +14,7 @@ html
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
     meta name="keywords" content=""
-    meta name="description" content="current_page.data.description"
+    meta name="description" content="#{current_page.data.description}"
     / Facebook
     meta property="og:title" content=""
     meta property="og:type" content=""
@@ -36,5 +36,5 @@ html
     link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
     = stylesheet_link_tag :site
     = javascript_include_tag :all
-  body.page_classes
+  body class="#{page_classes}"
     = yield
