--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,6 +2,7 @@
 layout: layout
 
 title: 'cocono fest. 2016'
+description: 九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。
 
 og_title: 'cocono fest. 2016'
 og_url: 'index.html'
