--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,11 +1,15 @@
+---
+description: "九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。"
+---
+
 | <!doctype html>
 html
   head
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
-    meta name="keywords" content="#{keywords}"
-    meta name="description" content="#{description}"
+    meta name="keywords" content=""
+    meta name="description" content="#{current_page.data.description}"
     / Facebook
     meta property="og:title" content=""
     meta property="og:type" content=""
