--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -4,7 +4,7 @@ html
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
-    meta name="keywords" content=""
+    meta name="keywords" content="#{current_page.data.keywords}"
     meta name="description" content="#{current_page.data.description}"
     / Facebook
     meta property="og:title" content=""
