--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -7,13 +7,13 @@ html
     meta name="keywords" content="#{current_page.data.keywords}"
     meta name="description" content="#{current_page.data.description}"
     / Facebook
-    meta property="og:title" content=""
-    meta property="og:type" content=""
+    meta property="og:title" content="#{current_page.data.og_title}"
+    meta property="og:type" content="#{current_page.data.og_type}"
     meta property="og:locale" content="ja_JP"
-    meta property="og:url" content=""
+    meta property="og:url" content="#{current_page.data.og_url}"
     meta property="og:site_name" content=""
-    meta property="og:description" content=""
-    meta property="og:image" content="http://coconofest.asia/images/"
+    meta property="og:description" content="#{current_page.data.og_description}"
+    meta property="og:image" content="http://coconofest.asia/images/#{current_page.data.og_image}"
     meta property="fb:app_id" content=""
     / Twitter
     meta name="twitter:card" content="summary"
