--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,3 +1,7 @@
+---
+description: "上書きテスト"
+---
+
 | <!doctype html>
 html
   head
@@ -10,7 +14,7 @@ html
     meta property="og:title" content="#{current_page.data.og_title}"
     meta property="og:type" content="#{current_page.data.og_type}"
     meta property="og:locale" content="ja_JP"
-    meta property="og:url" content="#{current_page.data.og_url}"
+    meta property="og:url" content="http://coconofest.asia/#{current_page.data.og_url}"
     meta property="og:site_name" content=""
     meta property="og:description" content="#{current_page.data.og_description}"
     meta property="og:image" content="http://coconofest.asia/images/#{current_page.data.og_image}"
