--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,5 +1,5 @@
 ---
-description: "上書きテスト"
+description_default: "上書きテスト"
 ---
 
 | <!doctype html>
@@ -9,7 +9,7 @@ html
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
     meta name="keywords" content="#{current_page.data.keywords}"
-    meta name="description" content="#{current_page.data.description}"
+    meta name="description" content="#{current_page.data.description_default}"
     / Facebook
     meta property="og:title" content="#{current_page.data.og_title}"
     meta property="og:type" content="#{current_page.data.og_type}"
