--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,7 +7,7 @@ keywords: 福岡,九州,フェス,音楽
 
 og_title: 'cocono fest. 2016'
 og_type: website
-og_url: 'index.html'
+og_url: ''
 og_description: 九州の音楽を地元へ、全国へ発信する。九州が舞台のDIYフェス。
 og_image: 'images/index/ogp.png'
 ---
