--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,7 +1,3 @@
----
-description_default: "上書きテスト"
----
-
 | <!doctype html>
 html
   head
@@ -9,7 +5,7 @@ html
     meta charset="utf-8"
     meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"
     meta name="keywords" content="#{current_page.data.keywords}"
-    meta name="description" content="#{current_page.data.description_default}"
+    meta name="description" content="#{current_page.data.description}"
     / Facebook
     meta property="og:title" content="#{current_page.data.og_title}"
     meta property="og:type" content="#{current_page.data.og_type}"
