パララックス修正

--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -141,6 +141,6 @@ header {
 @media screen and ( max-width: 767px ) {
   .section-first {
     background: url( "/images/header_image.jpg" );
-    background-attachment: fixed;
+    background-attachment: scroll;
   }
 }
