--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -147,18 +147,16 @@ header {
     position: fixed;
     width: 100%;
     height: 100vh;
-    /*
     display: block;
     top: 0;
     left: 0;
-    */
-    //background: url( "/images/section_first_image.jpg" );
-    //background-repeat: no-repeat;
+    background: url( "/images/section_first_image_sp.jpg" );
+    background-repeat: no-repeat;
     background-attachment: scroll;;
-    //background-position: center center;
-    //background-size: cover;
-    //-webkit-background-size: cover;
-    //-moz-background-size: cover;
-    //-o-background-size: cover;
+    background-position: center center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   }
 }
