--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -143,20 +143,10 @@ header {
 
   @media screen and ( max-width: 767px ) {
     .section-first {
-      //position: fixed;
-      width: 100%;
-      height: 100vh;
-      //display: block;
-      top: 0;
-      left: 0;
+      //width: 100%;
+      //height: 100%;
       background-image: url( "/images/section_first_image_sp.jpg" );
-      background-repeat: no-repeat;
-      background-attachment: scroll;;
-      background-position: center center;
-      background-size: cover;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
+      background-attachment: fixed;
     }
   }
 }
