--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -143,10 +143,15 @@ header {
 
   @media screen and ( max-width: 767px ) {
     .section-first {
-      //width: 100%;
-      //height: 100%;
+      width: 100%;
+      height: 100%;
       background-image: url( "/images/section_first_image_sp.jpg" );
-      background-attachment: fixed;
+      background-attachment: scroll;
+      background-position: center center;
+      background-size: cover;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
     }
   }
 }
