--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -145,7 +145,19 @@ header {
     .section-first {
       width: 100%;
       height: 100%;
-      background-image: url( "/images/section_first_image_sp.jpg" );
+      background-image: url( "/images/section_first_image_sp@2x.jpg" );
+      background-attachment: scroll;
+      background-position: center center;
+      background-size: cover;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+    }
+
+    .section-second {
+      width: 100%;
+      height: 100%;
+      background-image: url( "/images/section_second_image_sp@2x.jpg" );
       background-attachment: scroll;
       background-position: center center;
       background-size: cover;
