--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -39,7 +39,7 @@ header {
     height: 100%;
     top: 0;
     left: 0;
-    background: url( "/images/section_first_image.jpg" );
+    background: url( "/images/section_first_image.jpg" ); // 750px1334px
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
@@ -98,7 +98,7 @@ header {
     height: 1200px;
     top: calc( 600px + 100% ); // secondのheight+100%
     left: 0;
-    background: url( "/images/section_second_image.jpg" );
+    background: url( "/images/section_third_image.jpg" );
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
@@ -154,10 +154,10 @@ header {
       -o-background-size: cover;
     }
 
-    .section-second {
+    .section-third {
       width: 100%;
       height: 100%;
-      background-image: url( "/images/section_second_image_sp@2x.jpg" );
+      background-image: url( "/images/section_thrid_image_sp@2x.jpg" );
       background-attachment: scroll;
       background-position: center center;
       background-size: cover;
